@@ -84,6 +84,7 @@
 				<!-- This configuration allows the JUnit test runner to find the unit tests -->
 				<configuration>
 					<argLine>
+						--add-opens=com.avereon.zevra/com.avereon.event=ALL-UNNAMED
 						--add-opens=com.avereon.zevra/com.avereon.product=ALL-UNNAMED
 						--add-opens=com.avereon.zevra/com.avereon.settings=ALL-UNNAMED
 						--add-opens=com.avereon.zevra/com.avereon.undo=ALL-UNNAMED
